@@ -1726,6 +1726,19 @@ AC_SUBST(FW_VERSION)
 AC_SUBST(STATICR1)
 AC_SUBST(STATICR2)
 
+: ${CXX11=${CXX} -std=c++11}
+: ${CXX11FLAGS=${CXXFLAGS}}
+: ${CXX11PICFLAGS=${CXXPICFLAGS}}
+AC_SUBST(CXX11)
+AC_SUBST(CXX11FLAGS)
+AC_SUBST(CXX11PICFLAGS)
+if test -z "${SHLIB_CXX11LD}"; then
+  SHLIB_CXX11LD="\$(CXX11)"
+fi
+AC_SUBST(SHLIB_CXX11LD)
+: ${SHLIB_CXX11LDFLAGS=${SHLIB_CXXLDFLAGS}}
+AC_SUBST(SHLIB_CXX11LDFLAGS)
+
 ### OpenMP.
 
 ## The basic checking is performed via AC_OPENMP added in Autoconf 2.62,
