@@ -72,6 +72,9 @@ CXX = $(BINPREF)g++ $(M_ARCH)
 CXXCPP = $(CXX) -E
 CXXFLAGS = -O2 -Wall $(DEBUGFLAG) @EOPTS@
 CXXPICFLAGS = 
+CXX11 = $(BINPREF)g++ $(M_ARCH) -std=c++0x
+CXX11FLAGS = -O2 -Wall $(DEBUGFLAG) @EOPTS@
+CXX11PICFLAGS =
 DYLIB_EXT = .dll
 DYLIB_LD = $(DLL)
 DYLIB_LDFLAGS = -shared
@@ -133,6 +136,8 @@ SHLIB_CXXFLAGS =
 SHLIB_CXXLD = $(CXX)
 ## ideally -shared -static-libstdc++, but not for gcc 4.2.1
 SHLIB_CXXLDFLAGS = -shared
+SHLIB_CXX11LD = $(CXX11)
+SHLIB_CXX11LDFLAGS = -shared
 SHLIB_EXT = .dll
 SHLIB_FCLD = $(FC)
 ## ideally -shared -static-libgfortran, but not for gcc 4.2.1
